--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ apply plugin: "forge"
 apply plugin: "maven"
 
 group = "net.doubledoordev.insidertrading"
-version = "1.0.1"
+version = "1.0.2"
 
 targetCompatibility = 1.7
 sourceCompatibility = 1.7
@@ -36,7 +36,7 @@ def githuborg = 'DoubleDoorDevelopment'
 def description = 'Easy villager customizing!'
 
 minecraft {
-    version = "1.7.10-10.13.1.1224"
+    version = "1.7.10-10.13.4.1614-1.7.10"
     runDir = "jars"
 }
 
